<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2E0EA"
    tools:context=".ui.neighbour_list.DisplayNeighbourActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/custom_button"
        android:clickable="true"
        app:backgroundTint="#EFEFEF"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageButton
        android:id="@+id/ib_return"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:backgroundTint="@android:color/transparent"
        android:src="?attr/actionModeCloseDrawable"
        android:tint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="5dp"
        android:padding="10dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:text="+33 6  86 57 90 14"
                app:layout_constraintStart_toEndOf="@+id/iv_phone"
                app:layout_constraintTop_toBottomOf="@+id/tv_adresse" />

            <TextView
                android:id="@+id/tv_neighbour_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="Caroline"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#EFEFEF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_neighbour_name" />

            <ImageView
                android:id="@+id/iv_room"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_line"
                app:srcCompat="@drawable/ic_room_24px" />

            <TextView
                android:id="@+id/tv_adresse"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Saint pierre du mont à 5km"
                app:layout_constraintStart_toEndOf="@+id/iv_room"
                app:layout_constraintTop_toBottomOf="@+id/tv_line" />

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_room"
                app:srcCompat="@drawable/ic_phone_24px" />

            <ImageView
                android:id="@+id/iv_language"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_phone"
                app:srcCompat="@drawable/ic_language_24px" />

            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:text="www.facebook.fr / caroline"
                app:layout_constraintStart_toEndOf="@+id/iv_language"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_contact">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_about_me"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="A propos de moi"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#EFEFEF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_me" />

            <TextView
                android:id="@+id/tv_about_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="Bonjour ! Je souheterai faire de la marche nordique. Pas initiée, je cherche une ou plusieurs personnes sucesptibles de m'accompagner ! J'aime les jeux de cartes tels la belotte et le tarot..."
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_line2"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>